--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>❤️</title>
+    <title>for eyyyaaaaa❤️</title>
     <link rel="stylesheet" href="styles/main.css">
 <div class="wallpaper"></div>
     <div class="content">
@@ -12,7 +12,7 @@
 <body>
     <div class="bg_heart">
         <div class="message"></div>
-        <a href="love.html" class="next-button">pencet aku</a>
+        <a href="love.html" class="next-button">pencettt akuuuu</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -56,4 +56,5 @@
     Your browser does not support the audio element.
 </script>
 </body>
+
 </html>
